--- a/pc01/pc01_023.htm
+++ b/pc01/pc01_023.htm
@@ -28,7 +28,7 @@ return;}</script>
 <div id="sourceShowSC" class="showSC"><a href="#" onclick="javscript:toggleDiv('sourceSC')">1 spouse 2 children <img src="../css/downarrow.png"></a></div>
 <div id="sourceSC" class="scView"><div class="scList"><ul><li class="male"><b><a href="pc01_022.htm">Arthur Lester</a></b></li>
 <ul>
-<li class="female"><a href="pc01_002.htm">(Private)</a></li>
+<li class="female"><a href="pc01_002.htm">M. Lester (Private)</a></li>
 <li class="male"><a href="pc01_063.htm">David Lester</a></li>
 </ul>
 </ul></div><a href="#" onclick="javscript:toggleDiv('sourceSC')">Close <img src="../css/uparrow.png"></a>
