--- a/ps01/ps01_002.htm
+++ b/ps01/ps01_002.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>(Private)</title>
+<title>M. Lester (Private)</title>
 <link href="../css/lp_font_optima.css" rel="stylesheet" type="text/css" />
 <link href="../css/lp_text_standard.css" rel="stylesheet" type="text/css" />
 <link href="../css/lp_sheets_standard.css" rel="stylesheet" type="text/css" />
@@ -25,7 +25,7 @@
 <div class="psPerson">
 <div class="psRecord">
 <div class="psFields">
-<div class="psName"><span class="psTitle">Name</span><span class="psText">(Private) <a href="../pc01/pc01_002.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
+<div class="psName"><span class="psTitle">Name</span><span class="psText">M. Lester (Private) <a href="../pc01/pc01_002.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
 
 <div class="psParent"><span class="colFirst">Father</span><span class="colSecond"><a href="ps01_022.htm">Arthur Lester</a>  (1906-1989)</span></div>
 
@@ -38,7 +38,7 @@
 
 <div class="psRecord">
 <div class="psFields">
-<div class="psName"><span class="psTitle">1</span><span class="psText"><a href="ps01_001.htm">(Private)</a> <a href="../pc01/pc01_001.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
+<div class="psName"><span class="psTitle">1</span><span class="psText"><a href="ps01_001.htm">L. Crow (Private)</a> <a href="../pc01/pc01_001.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
 
 <div class="psParent"><span class="colFirst">Father</span><span class="colSecond"><a href="ps01_006.htm">Percy Mason Crow</a>  (1902-1968)</span></div>
 
@@ -52,9 +52,9 @@
 
 <div class="psRecord">
 <div class="psFields">
-<div class="psChild"><span class="colFirst">Children</span><span class="colSecond"><a href="ps01_003.htm">(Private)</a></span></div>
+<div class="psChild"><span class="colFirst">Children</span><span class="colSecond"><a href="ps01_003.htm">S. J. (Private)</a></span></div>
 
-<div class="psChild"><span class="colFirst">&nbsp;</span><span class="colSecond"><a href="ps01_004.htm">(Private)</a></span></div>
+<div class="psChild"><span class="colFirst">&nbsp;</span><span class="colSecond"><a href="ps01_004.htm">A. L. (Private)</a></span></div>
 </div>
 </div>
 </div>
