--- a/ps01/ps01_004.htm
+++ b/ps01/ps01_004.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>(Private)</title>
+<title>A. L. Crow (Private)</title>
 <link href="../css/lp_font_optima.css" rel="stylesheet" type="text/css" />
 <link href="../css/lp_text_standard.css" rel="stylesheet" type="text/css" />
 <link href="../css/lp_sheets_standard.css" rel="stylesheet" type="text/css" />
@@ -25,11 +25,11 @@
 <div class="psPerson">
 <div class="psRecord">
 <div class="psFields">
-<div class="psName"><span class="psTitle">Name</span><span class="psText">(Private) <a href="../pc01/pc01_004.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
+<div class="psName"><span class="psTitle">Name</span><span class="psText">A. L. Crow (Private) <a href="../pc01/pc01_004.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
 
-<div class="psParent"><span class="colFirst">Father</span><span class="colSecond"><a href="ps01_001.htm">(Private)</a></span></div>
+<div class="psParent"><span class="colFirst">Father</span><span class="colSecond"><a href="ps01_001.htm">L. Crow (Private)</a></span></div>
 
-<div class="psParent"><span class="colFirst">Mother</span><span class="colSecond"><a href="ps01_002.htm">(Private)</a></span></div>
+<div class="psParent"><span class="colFirst">Mother</span><span class="colSecond"><a href="ps01_002.htm">M. Lester (Private)</a></span></div>
 </div>
 </div>
 
@@ -38,7 +38,7 @@
 
 <div class="psRecord">
 <div class="psFields">
-<div class="psName"><span class="psTitle">1</span><span class="psText"><a href="ps01_005.htm">(Private)</a> <a href="../pc01/pc01_005.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
+<div class="psName"><span class="psTitle">1</span><span class="psText"><a href="ps01_005.htm">P. Lloyd (Private)</a> <a href="../pc01/pc01_005.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
 </div>
 </div>
 
