--- a/wc01/wc01_011.htm
+++ b/wc01/wc01_011.htm
@@ -52,7 +52,7 @@
 <div class="wcChildrenTitle">Children</div>
 
 <div class="wcChildren">
-<div class="wcFChild"><span class="wcChildName"><a href="wc01_001.htm">(Private)</a></span></div>
+<div class="wcFChild"><span class="wcChildName"><a href="wc01_001.htm">M. Lester (Private)</a></span></div>
 
 <div class="wcMChild"><span class="wcChildName"><a href="wc01_133.htm">David Lester</a></span><span class="wcChildDate">(1932 - 16 Oct 1940)</span><span class="wcChildStatus"> [Died as Child]</span></div>
 </div>
