--- a/wc01/wc01_002.htm
+++ b/wc01/wc01_002.htm
@@ -52,7 +52,7 @@
 <div class="wcChildrenTitle">Children</div>
 
 <div class="wcChildren">
-<div class="wcMChild"><span class="wcChildName"><a href="wc01_001.htm">(Private)</a></span></div>
+<div class="wcMChild"><span class="wcChildName"><a href="wc01_001.htm">L. Crow (Private)</a></span></div>
 </div>
 </div>
 </div>
