--- a/wc_toc.htm
+++ b/wc_toc.htm
@@ -14,16 +14,10 @@
 <div class="pageBody">
 <div class="tocTitle">The Crow/Lester Ancestry Research (UK)</div>
 
-<div class="tocAuthor">Steve</div>
+<div class="tocAuthor"></div>
 
 <div class="reportBody">
 <div class="reportBodyWrapper">
-<div class="tocImage">
-<div class="tocImageA">
-<div class="tocImageB"><img src="img/Where-To-Click.png" alt="" /></div>
-</div>
-</div>
-
 <div class="tocLinksTitle">Contents</div>
 
 <div class="tocLinks">
@@ -43,7 +37,7 @@
 <div class="tocIntroTitle">Introduction</div>
 
 <div class="tocIntro">
-<div class="tocIntroRecord"><span class="tocLinksIndent"></span><span class="tocIntroData">We&#8217;d love to hear from others with a mutual interest in the people and topics discussed on this website. &nbsp;Please drop us a line if you have additional information.<br /><font color="#202020"><hr /></font><br /><b>Family Cards</b> will appear when you click on a person&#8217;s name in the Index. Click on the individual's name and the <b>Person Sheet</b> will appear with research notes on that individual. This view is useful because it contains sources, events, facts, census records and other records. <br /><font color="#202020"><hr /></font><br /><b>Tree</b> – Click on the tree next to individual&#8217;s name and a family tree will appear. <br /><font color="#202020"><hr /></font><br /><b>Camera</b> – If there are pictures available, a small camera will appear next to the individual&#8217;s name.<br /><font color="#202020"><hr /></font><br /><b>WHERE TO CLICK!</b><br /><font color="#202020"><img src="http://gftree.github.io/Where-To-Click.png" alt="" border="0"></font><br /></span></div>
+<div class="tocIntroRecord"><span class="tocLinksIndent"></span><span class="tocIntroData">We&#8217;d love to hear from others with a mutual interest in the people and topics discussed on this website. &nbsp;Please drop us a line if you have additional information.<br /><font color="#202020"><hr /></font><br /><b>Family Cards</b> will appear when you click on a person&#8217;s name in the Index. Click on the individual's name and the <b>Person Sheet</b> will appear with research notes on that individual. This view is useful because it contains sources, events, facts, census records and other records. <br /><font color="#202020"><hr /></font><br /><b>Tree</b> – Click on the tree next to individual&#8217;s name and a family tree will appear. <br /><font color="#202020"><hr /></font><br /><b>Camera</b> – If there are pictures available, a small camera will appear next to the individual&#8217;s name.<br /><font color="#202020"><hr /></font><br /><i>This picture gives you a few ideas of where to click on the linked webpages:</i><br /><font color="#202020"><img src="http://gftree.github.io/Where-To-Click.png" alt="" border="0"></font><br /></span></div>
 </div>
 <a name="CNTC"></a>
 <div class="tocContactTitle">Contact</div>
