--- a/ps01/ps01_220.htm
+++ b/ps01/ps01_220.htm
@@ -137,12 +137,12 @@
 
 <div class="psNotesTitle">Notes for Robert Crow</div>
 
-<div class="psNotesData">^^ Find Jail 3x in Barnsley<br />^^ Linen Weavers in Barnsley<br />^^ Visit Wilson Street, Wombwell / Hoyland<br />^^ James Betts research</div>
+<div class="psNotesData">^^ Find Jail 3x in Barnsley<br />^^ Research Linen Weavers in Barnsley<br />^^ Photo Wilson Street, Wombwell / Hoyland<br />^^ James Betts research</div>
 </div>
 <!-- ignore=on -->
 
 <div class="psFooter">
-<div class="psFooterRecord"><span class="psModDate">Last Modified 28 Jul 2017</span><span class="psCreated">Created 29 Jul 2017 by Steve</span></div>
+<div class="psFooterRecord"><span class="psModDate">Last Modified 29 Jul 2017</span><span class="psCreated">Created 29 Jul 2017 by Steve</span></div>
 </div>
 <!-- ignore=off -->
 </div>
