--- a/wp01/wp01_220.htm
+++ b/wp01/wp01_220.htm
@@ -25,11 +25,11 @@
 
 <div class="wmTOCEntry"><a href="#d">IMG_0411</a></div>
 
-<div class="wmTOCEntry"><a href="#e">md16696575032</a></div>
+<div class="wmTOCEntry"><a href="#e">Convict Ships Book Cover</a></div>
 
 <div class="wmTOCEntry"><a href="#f">CP Rec</a></div>
 
-<div class="wmTOCEntry"><a href="#g">screenshot</a></div>
+<div class="wmTOCEntry"><a href="#g">Conditional Pardon Granted</a></div>
 
 <div class="wmTOCEntry"><a href="#h">J Somes SHIP</a></div>
 
@@ -126,7 +126,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">md16696575032</div>
+<div class="wmItemTitleData">Convict Ships Book Cover</div>
 </div>
 </div>
 
@@ -158,7 +158,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">screenshot</div>
+<div class="wmItemTitleData">Conditional Pardon Granted</div>
 </div>
 </div>
 
@@ -217,7 +217,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmDocument"><a href='#' OnClick='window.open("../sm01/s01_026a.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("p01_220k.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
