--- a/ps01/ps01_212.htm
+++ b/ps01/ps01_212.htm
@@ -24,20 +24,24 @@
 <div class="reportBodyWrapper">
 <div class="psPerson">
 <div class="psMRecord">
+<div class="psPicture">
+<div class="psPictureA"><a href="../wp01/wp01_212.htm"><img src="../pi01/pi01_212.jpg" alt="" /></a></div>
+</div>
+
 <div class="psFields">
-<div class="psName"><span class="psTitle">Name</span><span class="psText">Michael Mason <a href="../pc01/pc01_212.htm"><img src="../img/i_tree.png" alt="" /></a><span class="citation"><a href="../wc_src.htm#C23"> [23]</a></span></span></div>
+<div class="psName"><span class="psTitle">Name</span><span class="psText">Michael Mason <a href="../pc01/pc01_212.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_212.htm"><img src="../img/i_photo.png" alt="" /></a><span class="citation"><a href="../wc_src.htm#C23"> [23]</a></span></span></div>
 
 <div class="psEvent"><span class="colFirst">Birth</span><span class="colSecond">abt 1796, Derbyshire, Holbrook</span></div>
 
-<div class="psEvent"><span class="colFirst">Birth Memo</span><span class="colSecond">Born in same Parish as stated on 1841 Census</span></div>
+<div class="psEvent"><span class="colFirst">Birth Memo</span><span class="colSecond">Born in same Parish as his home in 1841 Census.</span></div>
 
-<div class="psEvent"><span class="colFirst">Census</span><span class="colSecond">1841, Derbyshire, Holbrook Moor Age: 45</span></div>
+<div class="psEvent"><span class="colFirst">Census</span><span class="colSecond">1841, Derbyshire, Holbrook Age: 45</span></div>
 
-<div class="psEvent"><span class="colFirst">Census Memo</span><span class="colSecond">Cotton Hose Maker.  Residence was written as Holbrook Moore, Derbyshire on census.</span></div>
+<div class="psEvent"><span class="colFirst">Census Memo</span><span class="colSecond">Cotton Hose Maker.</span></div>
 
 <div class="psEvent"><span class="colFirst">Death</span><span class="colSecond">bef 1851, Derbyshire, Holbrook Age: 55</span></div>
 
-<div class="psEvent"><span class="colFirst">O Memo</span><span class="colSecond">Frame Work Knitter, Source: 1896 Marriage Register for T Mason/E Crow</span></div>
+<div class="psEvent"><span class="colFirst">Death Memo</span><span class="colSecond">Frame Work Knitter, Source: 1896 Marriage Register for T Mason/E Crow.</span></div>
 </div>
 </div>
 
@@ -80,7 +84,7 @@
 <!-- ignore=on -->
 
 <div class="psFooter">
-<div class="psFooterRecord"><span class="psModDate">Last Modified 28 Jul 2017</span><span class="psCreated">Created 29 Jul 2017 by Steve</span></div>
+<div class="psFooterRecord"><span class="psModDate">Last Modified 29 Jul 2017</span><span class="psCreated">Created 29 Jul 2017 by Steve</span></div>
 </div>
 <!-- ignore=off -->
 </div>
