--- a/wc_toc.htm
+++ b/wc_toc.htm
@@ -27,7 +27,7 @@
 
 <div class="tocLinksContact"><span class="tocLinksIndent"></span><span class="tocLinksContactData"><a href="#CNTC">Contact</a></span></div>
 
-<div class="tocLinksHome"><span class="tocLinksIndent"></span><span class="tocLinksHomeData"><a href="wc01/wc01_081.htm">Home Card</a></span></div>
+<div class="tocLinksHome"><span class="tocLinksIndent"></span><span class="tocLinksHomeData"><a href="wc01/wc01_004.htm">Home Card</a></span></div>
 
 <div class="tocLinksIdx"><span class="tocLinksIndent"></span><span class="tocLinksIdxData"><a href="wc_idx/idx001.htm">Index</a></span></div>
 
@@ -37,7 +37,7 @@
 <div class="tocIntroTitle">Introduction</div>
 
 <div class="tocIntro">
-<div class="tocIntroRecord"><span class="tocLinksIndent"></span><span class="tocIntroData">We&#8217;d love to hear from others with a mutual interest in the people and topics discussed on this website. &nbsp;Please drop us a line if you have additional information.<br /><font color="#202020"><br /></font><b>Family Cards</b> will appear when you click on a person&#8217;s name in the Index. Click on the individual's name and the <b>Person Sheet</b> will appear with research notes on that individual. This view is useful because it contains sources, events, facts, census records and other records. <br /><br /><b>Tree</b> – Click on the tree next to individual&#8217;s name and a family tree will appear. <br /><br /><b>Camera</b> – If there are pictures available, a small camera will appear next to the individual&#8217;s name.<br /><br /><i>This picture gives you a few ideas of where to click on the linked webpages in the list above:<br /></i><br /><font color="#202020"><img src="http://gftree.github.io/Where-To-Click.png" alt="" border="0"></font><br /></span></div>
+<div class="tocIntroRecord"><span class="tocLinksIndent"></span><span class="tocIntroData">We&#8217;d love to hear from you if you have a mutual interest in the people and topics discussed on this website. Please drop us a line as we are actively seeking additional information. Visit our companion blog at: <font color="#202020"><img src="https://crowlesterancestry.wordpress.com" alt="" border="0"></font><br /><hr /><br /><b>Family Cards</b> will appear when you click on a person&#8217;s name in the Index. Click on the individual's name and the <b>Person Sheet</b> will appear with research notes on that individual. This view is useful because it contains sources, events, facts, census records and other records. <b>Tree</b> – Click on the tree next to individual&#8217;s name and a family tree will appear. <b>Camera</b> – If there are pictures available, a small camera will appear next to the individual&#8217;s name.<br /><br /><i>Where to click in the linked webpages (see list above):<br /></i><br /><font color="#202020"><img src="http://gftree.github.io/Where-To-Click.png" alt="" border="0"></font><br /></span></div>
 </div>
 <a name="CNTC"></a>
 <div class="tocContactTitle">Contact</div>
