--- a/ps01/ps01_208.htm
+++ b/ps01/ps01_208.htm
@@ -24,8 +24,12 @@
 <div class="reportBodyWrapper">
 <div class="psPerson">
 <div class="psMRecord">
+<div class="psPicture">
+<div class="psPictureA"><a href="../wp01/wp01_208.htm"><img src="../pi01/pi01_208.jpg" alt="" /></a></div>
+</div>
+
 <div class="psFields">
-<div class="psName"><span class="psTitle">Name</span><span class="psText">Thomas Mason <a href="../pc01/pc01_208.htm"><img src="../img/i_tree.png" alt="" /></a><span class="citation"><a href="../wc_src.htm#C11"> [11]</a>,<a href="../wc_src.htm#C12"> [12]</a>,<a href="../wc_src.htm#C13"> [13]</a>,<a href="../wc_src.htm#C14"> [14]</a>,<a href="../wc_src.htm#C15"> [15]</a>,<a href="../wc_src.htm#C16"> [16]</a>,<a href="../wc_src.htm#C17"> [17]</a>,<a href="../wc_src.htm#C18"> [18]</a>,<a href="../wc_src.htm#C19"> [19]</a>,<a href="../wc_src.htm#C20"> [20]</a>,<a href="../wc_src.htm#C21"> [21]</a>,<a href="../wc_src.htm#C22"> [22]</a></span></span></div>
+<div class="psName"><span class="psTitle">Name</span><span class="psText">Thomas Mason <a href="../pc01/pc01_208.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_208.htm"><img src="../img/i_photo.png" alt="" /></a><span class="citation"><a href="../wc_src.htm#C11"> [11]</a>,<a href="../wc_src.htm#C12"> [12]</a>,<a href="../wc_src.htm#C13"> [13]</a>,<a href="../wc_src.htm#C14"> [14]</a>,<a href="../wc_src.htm#C15"> [15]</a>,<a href="../wc_src.htm#C16"> [16]</a>,<a href="../wc_src.htm#C17"> [17]</a>,<a href="../wc_src.htm#C18"> [18]</a>,<a href="../wc_src.htm#C19"> [19]</a>,<a href="../wc_src.htm#C20"> [20]</a>,<a href="../wc_src.htm#C21"> [21]</a>,<a href="../wc_src.htm#C22"> [22]</a></span></span></div>
 
 <div class="psEvent"><span class="colFirst">Birth</span><span class="colSecond">1846, Derbyshire, Holbrook</span></div>
 
@@ -57,8 +61,12 @@
 <div class="psSpousesTitle">Spouses</div>
 
 <div class="psFRecord">
+<div class="psPicture">
+<div class="psPictureA"><a href="../wp01/wp01_207.htm"><img src="../pi01/pi01_207.jpg" alt="" /></a></div>
+</div>
+
 <div class="psFields">
-<div class="psName"><span class="psTitle">1</span><span class="psText"><a href="ps01_207.htm">Eliza Ellis</a> <a href="../pc01/pc01_207.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
+<div class="psName"><span class="psTitle">1</span><span class="psText"><a href="ps01_207.htm">Eliza Ellis</a> <a href="../pc01/pc01_207.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_207.htm"><img src="../img/i_photo.png" alt="" /></a></span></div>
 
 <div class="psEvent"><span class="colFirst">Birth</span><span class="colSecond">Mar 1842, Billingley, Rotherham, Yorkshire</span></div>
 
