--- a/ps01/ps01_211.htm
+++ b/ps01/ps01_211.htm
@@ -41,14 +41,20 @@
 <div class="psSpousesTitle">Spouses</div>
 
 <div class="psMRecord">
+<div class="psPicture">
+<div class="psPictureA"><a href="../wp01/wp01_212.htm"><img src="../pi01/pi01_212.jpg" alt="" /></a></div>
+</div>
+
 <div class="psFields">
-<div class="psName"><span class="psTitle">1</span><span class="psText"><a href="ps01_212.htm">Michael Mason</a> <a href="../pc01/pc01_212.htm"><img src="../img/i_tree.png" alt="" /></a><span class="citation"><a href="../wc_src.htm#C23"> [23]</a></span></span></div>
+<div class="psName"><span class="psTitle">1</span><span class="psText"><a href="ps01_212.htm">Michael Mason</a> <a href="../pc01/pc01_212.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_212.htm"><img src="../img/i_photo.png" alt="" /></a><span class="citation"><a href="../wc_src.htm#C23"> [23]</a></span></span></div>
 
 <div class="psEvent"><span class="colFirst">Birth</span><span class="colSecond">abt 1796, Derbyshire, Holbrook</span></div>
 
-<div class="psEvent"><span class="colFirst">Birth Memo</span><span class="colSecond">Born in same Parish as stated on 1841 Census</span></div>
+<div class="psEvent"><span class="colFirst">Birth Memo</span><span class="colSecond">Born in same Parish as his home in 1841 Census.</span></div>
 
 <div class="psEvent"><span class="colFirst">Death</span><span class="colSecond">bef 1851, Derbyshire, Holbrook Age: 55</span></div>
+
+<div class="psEvent"><span class="colFirst">Death Memo</span><span class="colSecond">Frame Work Knitter, Source: 1896 Marriage Register for T Mason/E Crow.</span></div>
 </div>
 </div>
 
