--- a/wc01/wc01_074.htm
+++ b/wc01/wc01_074.htm
@@ -32,19 +32,19 @@
 <div class="wcMarriage"><span class="wcMarriageTitle">m. </span><span class="wcMarriageData">23 May 1896, Barnsley, St Peters Church, Hoyland</span></div>
 
 <div class="wcSource"><span class="wcHusband">
-<div class="wcHusbandWrapper"><a href="../ps01/ps01_208.htm">Thomas Mason</a> <a href="../pc01/pc01_208.htm"><img src="../img/i_tree.png" alt="" /></a></div>
+<div class="wcHusbandWrapper"><a href="../ps01/ps01_208.htm">Thomas Mason</a> <a href="../pc01/pc01_208.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_208.htm"><img src="../img/i_photo.png" alt="" /></a></div>
 </span><span class="wcWife">
-<div class="wcWifeWrapper"><a href="../ps01/ps01_207.htm">Eliza Ellis</a> <a href="../pc01/pc01_207.htm"><img src="../img/i_tree.png" alt="" /></a></div>
+<div class="wcWifeWrapper"><a href="../ps01/ps01_207.htm">Eliza Ellis</a> <a href="../pc01/pc01_207.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_207.htm"><img src="../img/i_photo.png" alt="" /></a></div>
 </span></div>
 
 <div class="wcFacts"><span class="wcHFacts">
-<div class="wcHFactsWrapper">
+<div class="wcHFactsWrapper"><span class="wcFactPicture"><a href="../wp01/wp01_208.htm"><img src="../pi01/pi01_208.jpg" width="125" height="175" alt="" /></a></span>
 <div class="wcFactsRecord"><span class="wcFactTitle">b. </span><span class="wcFactData">1846, Derbyshire, Holbrook</span></div>
 
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">1919, Barnsley, Yorkshire, age: 73</span></div>
 </div>
 </span><span class="wcWFacts">
-<div class="wcWFactsWrapper">
+<div class="wcWFactsWrapper"><span class="wcFactPicture"><a href="../wp01/wp01_207.htm"><img src="../pi01/pi01_207.jpg" width="125" height="67" alt="" /></a></span>
 <div class="wcFactsRecord"><span class="wcFactTitle">b. </span><span class="wcFactData">Mar 1842, Billingley, Rotherham, Yorkshire</span></div>
 
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">1920, Barnsley, Yorkshire, age: 77</span></div>
