--- a/wc01/wc01_075.htm
+++ b/wc01/wc01_075.htm
@@ -32,13 +32,13 @@
 <div class="wcMarriage"></div>
 
 <div class="wcSource"><span class="wcHusband">
-<div class="wcHusbandWrapper"><a href="../ps01/ps01_212.htm">Michael Mason</a> <a href="../pc01/pc01_212.htm"><img src="../img/i_tree.png" alt="" /></a></div>
+<div class="wcHusbandWrapper"><a href="../ps01/ps01_212.htm">Michael Mason</a> <a href="../pc01/pc01_212.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_212.htm"><img src="../img/i_photo.png" alt="" /></a></div>
 </span><span class="wcWife">
 <div class="wcWifeWrapper"><a href="../ps01/ps01_211.htm">Sarah</a> <a href="../pc01/pc01_211.htm"><img src="../img/i_tree.png" alt="" /></a></div>
 </span></div>
 
 <div class="wcFacts"><span class="wcHFacts">
-<div class="wcHFactsWrapper">
+<div class="wcHFactsWrapper"><span class="wcFactPicture"><a href="../wp01/wp01_212.htm"><img src="../pi01/pi01_212.jpg" width="125" height="89" alt="" /></a></span>
 <div class="wcFactsRecord"><span class="wcFactTitle">b. </span><span class="wcFactData">abt 1796, Derbyshire, Holbrook</span></div>
 
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">bef 1851, Derbyshire, Holbrook, age: 55</span></div>
