--- a/wc01/wc01_084.htm
+++ b/wc01/wc01_084.htm
@@ -34,7 +34,7 @@
 <div class="wcSource"><span class="wcHusband">
 <div class="wcHusbandWrapper"><a href="../ps01/ps01_224.htm">Thomas Nussey</a> <a href="../pc01/pc01_224.htm"><img src="../img/i_tree.png" alt="" /></a></div>
 </span><span class="wcWife">
-<div class="wcWifeWrapper"><a href="../ps01/ps01_207.htm">Eliza Ellis</a> <a href="../pc01/pc01_207.htm"><img src="../img/i_tree.png" alt="" /></a></div>
+<div class="wcWifeWrapper"><a href="../ps01/ps01_207.htm">Eliza Ellis</a> <a href="../pc01/pc01_207.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_207.htm"><img src="../img/i_photo.png" alt="" /></a></div>
 </span></div>
 
 <div class="wcFacts"><span class="wcHFacts">
@@ -44,7 +44,7 @@
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">Dec 1873, Barnsley, Yorkshire, age: 38</span></div>
 </div>
 </span><span class="wcWFacts">
-<div class="wcWFactsWrapper">
+<div class="wcWFactsWrapper"><span class="wcFactPicture"><a href="../wp01/wp01_207.htm"><img src="../pi01/pi01_207.jpg" width="125" height="67" alt="" /></a></span>
 <div class="wcFactsRecord"><span class="wcFactTitle">b. </span><span class="wcFactData">Mar 1842, Billingley, Rotherham, Yorkshire</span></div>
 
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">1920, Barnsley, Yorkshire, age: 77</span></div>
